[package]
name = "openchecks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple checks framework"
repository = "https://github.com/scott-wilson/openchecks"
keywords = ["validation", "checks", "studio", "pipeline"]
include = [
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/SECURITY.md",
    "/src/**/*.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
async-trait = "0.1.81"
bitflags = "2.6.0"

[dev-dependencies]
tokio = { version = "1.38.1", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "time",
] }

[features]
arbitrary = ["dep:arbitrary", "bitflags/arbitrary"]
