[package]
name = "openchecks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple checks framework"
repository = "https://github.com/scott-wilson/openchecks"
keywords = ["asset", "checks", "pipeline", "validation"]
include = [
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/SECURITY.md",
    "/src/**/*.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
async-trait = "0.1.88"
bitflags = "2.9.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "time",
] }

[features]
arbitrary = ["dep:arbitrary", "bitflags/arbitrary"]
