[package]
name = "openchecks"
version = "0.2.0"
edition = "2021"
description = "A simple checks framework"
repository = "https://github.com/scott-wilson/openchecks"
license = "MIT OR Apache-2.0"
keywords = ["asset", "checks", "pipeline", "validation"]
include = [
  "/CHANGELOG.md",
  "/Cargo.toml",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
  "/SECURITY.md",
  "/src/**/*.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
async-trait = "0.1.89"
bitflags = "2.9.4"
rayon = { version = "1.11.0", optional = true }
tokio = { version = "1.47.1", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }

[features]
arbitrary = ["bitflags/arbitrary", "dep:arbitrary"]
async-tokio-scheduler = ["dep:tokio"]
threaded-scheduler = ["dep:rayon"]
