[package]
name = "checks-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
checks = { path = "..", features = ["arbitrary"] }
tokio = { version = "1.37.0", optional = true, features = ["rt"] }
async-trait = { version = "0.1.79", optional = true }

[features]
async = ["dep:tokio", "dep:async-trait"]

[[bin]]
name = "result_new"
path = "fuzz_targets/result/new.rs"
test = false
doc = false
bench = false

[[bin]]
name = "result_new_passed"
path = "fuzz_targets/result/new_passed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "result_new_skipped"
path = "fuzz_targets/result/new_skipped.rs"
test = false
doc = false
bench = false

[[bin]]
name = "result_new_warning"
path = "fuzz_targets/result/new_warning.rs"
test = false
doc = false
bench = false

[[bin]]
name = "result_new_failed"
path = "fuzz_targets/result/new_failed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "status_is_pending"
path = "fuzz_targets/status/is_pending.rs"
test = false
doc = false
bench = false

[[bin]]
name = "status_has_passed"
path = "fuzz_targets/status/has_passed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "status_has_failed"
path = "fuzz_targets/status/has_failed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "runner_async_run"
path = "fuzz_targets/runner/async_run.rs"
test = false
doc = false
bench = false
required-features = ["async"]

[[bin]]
name = "runner_run"
path = "fuzz_targets/runner/run.rs"
test = false
doc = false
bench = false
