[package]
name = "copenchecks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scott-wilson/openchecks"

[lib]
name = "copenchecks"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_openchecks = { path = "../../", package = "openchecks" }
bitflags = "2.6.0"
libc = "0.2.164"

[build-dependencies]
cbindgen = "0.27.0"

[dev-dependencies]
lazy_static = "1.5.0"
