[package]
name = "copenchecks"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scott-wilson/openchecks"

[lib]
name = "copenchecks"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_openchecks = { path = "../../", package = "openchecks" }
bitflags = "2.9.1"
libc = "0.2.174"

[build-dependencies]
cbindgen = "0.29.0"
