[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openchecks"
description = "A simple checks framework"
authors = [{ name = "Scott Wilson", email = "scott@propersquid.com" }]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
requires-python = "~=3.7"
version = "0.1.0"

[project.optional-dependencies]
build = ["meson ~= 1.5"]
docs = [
    "myst-parser ~= 3.0",
    "sphinx ~= 7.2",
    "sphinx-rtd-theme ~= 2.0",
    "breathe ~= 4.34",
]

[tool.ruff]
lint.select = ["ANN", "BLE", "D", "E", "F", "I", "N", "PT", "S", "YTT"]
line-length = 88
lint.ignore = ["ANN101", "ANN102"]
