[build-system]
requires = ["setuptools>=75.6"]
build-backend = "setuptools.build_meta"

[project]
name = "openchecks"
description = "A simple checks framework"
authors = [{ name = "Scott Wilson", email = "scott@propersquid.com" }]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
requires-python = "~=3.7"
version = "0.1.0"

[project.urls]
documentation = "https://openchecks.readthedocs.io/"
repository = "https://github.com/scott-wilson/openchecks/"

[project.optional-dependencies]
build = ["meson ~= 1.6"]
docs = [
    "myst-parser ~= 4.0",
    "sphinx ~= 8.1",
    "sphinx-rtd-theme ~= 3.0",
    "breathe ~= 4.35",
]

[tool.ruff]
lint.select = ["ANN", "BLE", "D", "E", "F", "I", "N", "PT", "S", "YTT"]
line-length = 88
lint.ignore = ["ANN101", "ANN102"]
