[build-system]
requires = ["setuptools>=75.6"]
build-backend = "setuptools.build_meta"

[project]
name = "openchecks"
description = "A simple checks framework"
authors = [{ name = "Scott Wilson", email = "scott@propersquid.com" }]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
requires-python = "~=3.7"
version = "0.1.0"

[project.urls]
documentation = "https://openchecks.readthedocs.io/"
repository = "https://github.com/scott-wilson/openchecks/"

[project.optional-dependencies]
build = ["meson"]
docs = ["myst-parser", "sphinx", "sphinx-rtd-theme", "breathe"]

[tool.ruff]
lint.select = ["ANN", "BLE", "D", "E", "F", "I", "N", "PT", "S", "YTT"]
line-length = 88
lint.ignore = ["ANN101", "ANN102"]
