[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "openchecks"
description = "A simple checks framework"
authors = [{ name = "Scott Wilson", email = "scott@propersquid.com" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = "~=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
documentation = "https://openchecks.readthedocs.io/"
repository = "https://github.com/scott-wilson/openchecks/"

[project.optional-dependencies]
build = [
    "maturin ~= 1.9; platform_system != \"Linux\"",
    "maturin[patchelf] ~= 1.9; platform_system == \"Linux\"",
]
test = [
    "hypothesis",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]
docs = ["myst-parser", "sphinx", "sphinx-rtd-theme"]
fuzz = ["openchecks[test]", "atheris"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
lint.select = ["ANN", "BLE", "D", "E", "F", "I", "N", "PT", "S", "YTT"]
line-length = 88
lint.ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true
